Include Delete button

--- a/src/component.css
+++ b/src/component.css
@@ -72,7 +72,6 @@ header {
     padding: 10px;
     width: 240px;
     margin: 16px;
-    display:flex;
     flex-direction: column;
     float: left;
     position: relative;  
@@ -86,4 +85,20 @@ header {
     margin-bottom: 10px;
     white-space: pre-wrap;
     word-wrap: break-word;
+  }
+
+  .note button {
+    position: relative;
+    float: right;
+    margin-right: 10px;
+    color: #f5ba13;
+    border: none;
+    width: 36px;
+    height: 36px;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  .note button img {
+    width: 1rem;
   }
